--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite preview"
+    "start": "vite build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
